Fix QR code scan in dark mode

--- a/components/form.module.css
+++ b/components/form.module.css
@@ -75,8 +75,10 @@ div.qr {
     display: grid;
 }
 
-div.qr > svg {
+div.qr>svg {
     justify-self: center;
     width: 100%;
     height: auto;
+    padding: 1rem;
+    background-color: white;
 }
